# bracket-predict

./: .gitattributes  .gitignore  .pre-commit-config.yaml  NCAA_predict2.py  README.md  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
bracket_explorer/: manage.py
bracket_explorer/bracket_explorer/: asgi.py  settings.py  urls.py  wsgi.py
bracket_explorer/brackets/: admin.py  models.py  prediction_engine.py  urls.py  views.py
bracket_explorer/brackets/migrations/: 0001_initial.py  0002_bracket.py
bracket_explorer/brackets/templates/brackets/: bracket-detail.html
deploy/: .gitignore  README.md  ansible.cfg  requirements.yml  site.yml
deploy/group_vars/all/: vault.yml
deploy/roles/bracket-explorer-provision/defaults/: main.yml
deploy/roles/bracket-explorer-provision/files/: bracket-explorer.service  bracket-explorer.socket  deploy.sh
deploy/roles/bracket-explorer-provision/tasks/: main.yml
deploy/roles/bracket-explorer-provision/templates/: Caddyfile  environment
deploy/roles/firewall/tasks/: main.yml
deploy/roles/provisioning-user/defaults/: main.yml
deploy/roles/provisioning-user/handlers/: main.yml
deploy/roles/provisioning-user/tasks/: create-provisioning-user.yml  main.yml
deploy/roles/ssh-harden/handlers/: main.yml
deploy/roles/ssh-harden/tasks/: main.yml
