[tool.poetry]
package-mode = false
authors = ["Chathan Driehuys <chathan@driehuys.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.0.4"
django-tailwind = "^3.8.0"
psycopg = "^3.1.18"
django-allauth = "^0.61.1"
uuid = "^1.30"


[tool.poetry.group.dev.dependencies]
# Need to keep ruff in sync with the version pinned in `.pre-commit-config.yaml`
ruff = "~=0.4.0"
pre-commit = "^3.7.0"

[tool.ruff.lint]
extend-select = [
    # isort
    "I",
    # flake8-django
    "DJ",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
